--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.0",
+    "three": "^0.176.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
